--- a/SampleBioinformatics.Tests/SampleBioinformatics.UnitTests.csproj
+++ b/SampleBioinformatics.Tests/SampleBioinformatics.UnitTests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{A7432C2D-043B-43F2-BE5B-0E95CE49DC29}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SampleBioinformatics.Tests</RootNamespace>
-    <AssemblyName>SampleBioinformatics.Tests</AssemblyName>
+    <RootNamespace>SampleBioinformatics.UnitTests</RootNamespace>
+    <AssemblyName>SampleBioinformatics.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -96,7 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleBioinformaticsTests.cs" />
+    <Compile Include="SampleBioinformaticsUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
