Renamed some folders to be in sync with the namespace, project, and assembly names.
Discovered that the website wasn't working after getting the integration test running in AppVeyor, found and fixed the problem.

--- a/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
+++ b/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
@@ -105,7 +105,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SampleBioinformatics\SampleBioinformatics.Web.csproj">
+    <ProjectReference Include="..\SampleBioinformatics.Web\SampleBioinformatics.Web.csproj">
       <Project>{0F718D00-6B93-4F4C-A709-B6C2A1FD6BF1}</Project>
       <Name>SampleBioinformatics.Web</Name>
     </ProjectReference>
