--- a/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
+++ b/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web.Http">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -52,8 +55,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MockSampleBioinformaticsLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleBioinformaticsBusinessLogicTests.cs" />
+    <Compile Include="SampleBioinformaticsControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -65,6 +70,14 @@
     <ProjectReference Include="..\SampleBioinformatics.BusinessLogic\SampleBioinformatics.BusinessLogic.csproj">
       <Project>{b466618b-827b-46d7-8e08-51b0d87cc39f}</Project>
       <Name>SampleBioinformatics.BusinessLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SampleBioinformatics.Interface\SampleBioinformatics.Interface.csproj">
+      <Project>{fd9b92b6-f7af-4a11-a6e1-d3a17dd76471}</Project>
+      <Name>SampleBioinformatics.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SampleBioinformatics.Web\SampleBioinformatics.Web.csproj">
+      <Project>{0f718d00-6b93-4f4c-a709-b6c2a1fd6bf1}</Project>
+      <Name>SampleBioinformatics.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
