Created unit tests to validate that all 20 amino acids and the stop command are decoded from the correct sequence of bases.

--- a/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
+++ b/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AminoAcidEncodingTests.cs" />
     <Compile Include="MockSampleBioinformaticsLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleBioinformaticsBusinessLogicTests.cs" />
