--- a/SampleBioinformatics.BusinessLogic/SampleBioinformatics.BusinessLogic.csproj
+++ b/SampleBioinformatics.BusinessLogic/SampleBioinformatics.BusinessLogic.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AminoAcidEncodings.cs" />
     <Compile Include="Logic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
