--- a/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
+++ b/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
@@ -56,13 +56,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AminoAcidEncodingTests.cs" />
-    <Compile Include="MockSampleBioinformaticsLogic.cs" />
+    <Compile Include="MockBusinessLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleBioinformaticsBusinessLogicTests.cs" />
-    <Compile Include="SampleBioinformaticsWebAPIControllerTests.cs" />
+    <Compile Include="BusinessLogicTests.cs" />
+    <Compile Include="WebAPIControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="WebUiTests.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
