--- a/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
+++ b/SampleBioinformatics.UnitTests/SampleBioinformatics.UnitTests.csproj
@@ -63,9 +63,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="Scripts\angular-mocks.js" />
     <Content Include="WebUiTests.js" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Chutzpah.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +84,7 @@
       <Name>SampleBioinformatics.Web</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
