The integration tests have been updated to reflect the UI changes.

--- a/SampleBioinformatics.IntegrationTests/SampleBioinformatics.IntegrationTests.csproj
+++ b/SampleBioinformatics.IntegrationTests/SampleBioinformatics.IntegrationTests.csproj
@@ -55,7 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SampleBioinformaticsIntegrationTests.cs" />
+    <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
