--- a/SampleBioinformatics.Web/SampleBioinformatics.Web.csproj
+++ b/SampleBioinformatics.Web/SampleBioinformatics.Web.csproj
@@ -185,7 +185,7 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Properties\PublishProfiles\SampleBioinformatics20160605063635.pubxml" />
+    <None Include="Properties\PublishProfiles\SampleBioinformaticsWeb20160719084954 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
